--- a/metafenliu.ini
+++ b/metafenliu.ini
@@ -163,3 +163,22 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🌐 Default`[]DIRECT`[]♻️ 自
 
 ; ==========================================================
 ; 4) 非标端口
+; ==========================================================
+custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
+custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+
+
+; ==========================================================
+; 5) 国家节点测速组（保持不动）
+; ==========================================================
+; 全节点（允许任何节点显示）
+custom_proxy_group=🧭 手动选择`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|\\bHK\\b|hongkong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
+; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
+; 说明：用负向匹配把五大区节点剔除，剩余即“冷门”
+custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
